deploy/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsa-backend
  labels:
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: dsa
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 80
      targetPort: http
