deploy/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsa-frontend
  labels:
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: dsa
    app.kubernetes.io/instance: dsa
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
