deploy/base/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsa-postgresql
  labels:
    app.kubernetes.io/component: postgresql
spec:
  selector:
    app.kubernetes.io/name: dsa
    app.kubernetes.io/component: postgresql
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
