deploy/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsa-redis
  labels:
    app.kubernetes.io/component: redis
spec:
  selector:
    app.kubernetes.io/name: dsa
    app.kubernetes.io/component: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
